# slugify

./: .gitignore  README.md  pyproject.toml
slugify/: cli.py
tests/: test_cli.py
