[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slugify"
version = "0.1.0"
description = "CLI tool to slugify filenames and directories"
requires-python = ">=3.9"

[project.scripts]
slugify = "slugify.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
